build.log
shared:INFO: (Emscripten: Running sanity checks)
r_data.c:322:26: error: call to undeclared library function 'malloc' with type 'void *(unsigned long)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  322 |     patchcount = (byte *)malloc (texture->width);
      |                          ^
r_data.c:322:26: note: include the header <stdlib.h> or explicitly provide a declaration for 'malloc'
r_data.c:355:6: error: call to undeclared library function 'free' with type 'void (void *)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  355 |             free(patchcount);
      |             ^
r_data.c:355:6: note: include the header <stdlib.h> or explicitly provide a declaration for 'free'
r_data.c:453:19: error: call to undeclared library function 'alloca' with type 'void *(unsigned long)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  453 |     patchlookup = alloca (nummappatches*sizeof(*patchlookup));
      |                   ^
r_data.c:453:19: note: include the header <stdlib.h> or explicitly provide a declaration for 'alloca'
3 errors generated.
emcc: error: '/home/runner/work/DOOM/DOOM/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -fvisibility=default -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/runner/work/DOOM/DOOM/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O2 -w -DNORMALUNIX r_data.c -c -o /tmp/emscripten_temp_v9qnevte/r_data_41.o' failed (returned 1)
